blue-green-deployement/ingresscontrolstage.yaml
apiVersion: networking.k8s.io/v1/v1
kind: Ingress
metadata:
  name: python-ingress-stage
  namespace: hotel
spec:
  rules:
  - host: pythonstage.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: python-svc-stage
          servicePort: 80
